# ToDoApp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  ToDoApp_en_US.ts  ToDoApp_fr.ts  burndownwidget.h  category.h  chartswidget.h  debug.h  exemple_git_integration.json  exemple_taches.json  fill_translations.py  focusmodedialog.cpp  focusmodedialog.h  githubconnector.cpp  githubconnector.h  gitissuetask.cpp  gitlabconnector.h  gitprojectwidget.cpp  gitprojectwidget.h  gitprojectwidget.ui  gitrepository.h  kanbanview.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pdfexporttemplate.h  persistencemanager.cpp  persistencemanager.h  pomodorotimer.cpp  pomodorotimer.h  priority.h  ressource.qrc  statisticswidget.cpp  statisticswidget.h  statisticswidget.ui  status.h  task.cpp  (+17 more)
misc/: architecture_mvc.uxf  diagramme_classes_complet.uxf  diagramme_classes_new.uxf  modele_graphe.uxf  todo.md
rapport/: Makefile  rapport.tex
rapport/images/: architecture_mvc.mmd
resources/: ressource.qrc
resources/themes/: dark.qss  light.qss  warm.qss
src/git/: gitissuetask.h  gitlabconnector.cpp  gitprojectwidget.cpp  gitrepository.cpp  gitsyncdialog.cpp  gitsyncdialog.h  repositorymanager.cpp  repositorymanager.h
src/models/: category.cpp  category.h  priority.h  status.h  task.cpp  task.h  taskitemdelegate.cpp  taskitemdelegate.h  taskmodel.cpp  taskmodel.h
src/utils/: pdfexporttemplate.cpp  streakscalculator.cpp  streakscalculator.h  themesmanager.cpp  themesmanager.h
src/widgets/: burndownwidget.cpp  chartswidget.cpp  heatmapwidget.cpp  heatmapwidget.h  kanbanview.cpp  kanbanview.h  mainwindow.cpp  pomodorotimer.cpp  statisticswidget.cpp  taskdetailwidget.cpp  taskdetailwidget.h  timelinewidget.cpp  timelinewidget.h
themes/: dark.qss  light.qss  warm.qss
translations/: ToDoApp_en_US.ts  ToDoApp_fr.ts
ui/: mainwindow.ui  statisticswidget.ui  taskdetailwidget.ui
